<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:background="#FFFFFF"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ImageView
        android:id="@+id/imgAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/zapptviconabout" />

        <TextView
            android:id="@+id/txtAbout1"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
       		android:gravity="center"
            android:text="@string/about1"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/txtAbout2"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
       		android:gravity="center"
            android:text="@string/about2"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/txtAbout3"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
       		android:gravity="center"
            android:text="@string/about3"
            android:clickable="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    

</RelativeLayout>