<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bordered_background"
    android:layout_marginBottom="4dp"
    android:padding="8dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/imgAlarmLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_weight="0.25" >
		
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgAlarm"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_gravity="center"
                android:src="@drawable/alarma" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_alarm"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imgFavouriteLayout"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgFavourite"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_gravity="center"
                android:src="@drawable/favoritos" />

            <TextView
                android:id="@+id/txtFavourite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/app_favourites"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/imgCheckinLayout"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgCheckin"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_gravity="center"
                android:src="@drawable/check" />

            <TextView
                android:id="@+id/txtCheckin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:text="@string/app_check"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/imgShareLayout"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_gravity="center"
                
                android:src="@drawable/share" />

            <TextView
                android:id="@+id/txtShare"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/app_share"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>